Add token-based auth
